Populate quic_connection_error in NetErrorDetails even if the handshake has not been confirmed. Presumably, this request will be retried over TCP and no error details will be needed, but we should be consistent in any case.

BUG=754477

Change-Id: I3f939b1f9b58a7b57b219a892ae7fb8ba646a450